--- a/app/templates/users/create.html
+++ b/app/templates/users/create.html
@@ -15,7 +15,7 @@
 
     <div class="column auto" style="height: auto;">
       <div class="columns is-multiline">
-        {% for user in users %}
+        {% for user in users | sort(attribute = 'first_name') %}
         <a class="column is-half-fullhd is-half-widescreen is-half-desktop is-full-tablet is-full-mobile"
           href="/users/{{ user.id }}">
           <div class="card">
