--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,7 @@
       <h1 class="block" style="font-size: 3rem;">Schedulearn</h1>
       <p class="block">Schedulearn is a platform that makes scheduling deep learning models easy.</p>
     </div>
+    <!-- put the component here -->
     {% endblock %}
   </main>
   <script src="{{ url_for('static', path='/js/app.js') }}"></script>
