--- a/app/templates/dashboard/profile.html
+++ b/app/templates/dashboard/profile.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="columns block row">
         <div class="column auto card box" style="height: 500px; padding: 2rem;">
-            {% if user.admin %}
+            {% if user.role_mask | determine_role in ['admin', 'superadmin'] %}
             <div style="position: absolute; top: 10px; left: 10px;">
                 <div class="tag is-primary">Admin</div>
             </div>
