--- a/app/templates/dashboard/users.html
+++ b/app/templates/dashboard/users.html
@@ -29,7 +29,7 @@
                         </p>
                     </div>
                 </div>
-                {% if user.admin %}
+                {% if user.role_mask | determine_role in ['admin', 'superadmin'] %}
                 <div style="position: absolute; top: 10px; right: 10px;">
                     <div class="tag is-primary">Admin</div>
                 </div>
