--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -40,7 +40,7 @@
       </div>
     </div>
 
-    <button class="button is-primary">Sign in</button>
+    <button class="button is-primary">Sign up</button>
   </form>
 </div>
 {% endblock %}
